@@ -27,6 +27,14 @@
  *
  * History:
  *
+ *  1.10 - 2025-06-03:
+ *
+ *   - Fix a performancce regression in v1.8 (e78e060e0), where he
+ *     measured performance decreased especially with many threads due
+ *     to an additional OpenMP barrier that was added.  The issue is
+ *     fixed by stopping the timer after the first barrier, thus only
+ *     timing the SpMV kernel
+ *
  *  1.9 - 2025-02-06:
  *
  *   - place output vector and row pointers in sector 1 together with
@@ -259,7 +267,7 @@ static const size_t BITS_PER_LONG_LONG = CHAR_BIT * sizeof(long long);
 #endif
 
 const char * program_name = "csrspmv";
-const char * program_version = "1.9";
+const char * program_version = "1.10";
 const char * program_copyright =
     "Copyright (C) 2025 James D. Trotter";
 const char * program_license =
@@ -2680,6 +2688,7 @@ int main(int argc, char *argv[])
 
 #ifdef _OPENMP
         #pragma omp barrier
+        clock_gettime(CLOCK_MONOTONIC, &t1);
         for (int t = 0; t < omp_get_num_threads(); t++) {
             if (t == omp_get_thread_num() && !err && priverr) err = priverr;
             #pragma omp barrier
@@ -2701,7 +2710,6 @@ int main(int argc, char *argv[])
         #pragma omp master
 #endif
         if (args.verbose > 0) {
-            clock_gettime(CLOCK_MONOTONIC, &t1);
             fprintf(stderr, "%'.6f seconds (%'.3f Gnz/s, %'.3f Gflop/s, %'.1f to %'.1f GB/s)\n",
                     timespec_duration(t0, t1),
                     (double) num_nonzeros * 1e-9 / (double) timespec_duration(t0, t1),
@@ -2771,6 +2779,7 @@ int main(int argc, char *argv[])
 
 #ifdef _OPENMP
         #pragma omp barrier
+        clock_gettime(CLOCK_MONOTONIC, &t1);
         for (int t = 0; t < omp_get_num_threads(); t++) {
             if (t == omp_get_thread_num() && !err && priverr) err = priverr;
             #pragma omp barrier
@@ -2792,7 +2801,6 @@ int main(int argc, char *argv[])
         #pragma omp master
 #endif
         if (args.verbose > 0) {
-            clock_gettime(CLOCK_MONOTONIC, &t1);
             fprintf(stderr, "%'.6f seconds (%'.3f Gnz/s, %'.3f Gflop/s, %'.1f to %'.1f GB/s)\n",
                     timespec_duration(t0, t1),
                     (double) num_nonzeros * 1e-9 / (double) timespec_duration(t0, t1),
